--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   dartz: ^0.10.0-nullsafety.2
   equatable: ^2.0.2
+  firebase_core: ^1.22.0
+  firebase_crashlytics: ^2.8.10
+  firebase_analytics: ^9.3.4
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
@@ -36,19 +39,19 @@ dependencies:
   get_it: ^7.1.3
   google_fonts: ^2.1.0
   http: ^0.13.3
+  movie:
+    path: movie
   path_provider: ^2.0.2
   provider: ^6.0.0
   rxdart: ^0.27.4
   search_movie:
     path: search_movie
+  search_tv_show:
+    path: search_tv_show
   sqflite: ^2.0.0+3
   test_cov_console: ^0.2.2
-  movie:
-    path: 'movie'
   tv_show:
-    path: 'tv_show'
-  search_tv_show:
-    path: 'search_tv_show'
+    path: tv_show
 
 dev_dependencies:
   bloc_test: ^9.0.3
