--- a/search_tv_show/pubspec.yaml
+++ b/search_tv_show/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   path_provider: ^2.0.2
   provider: ^6.0.0
   rxdart: ^0.27.4
+  firebase_core: ^1.22.0
   
 dev_dependencies:
   flutter_test:
